--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林), server: 213.183.53.200, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇸🇬 新加坡-222.4KB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林), server: 213.183.53.177, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林), server: 213.183.53.177, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇺🇸 美国-2.55MB/s(Youtube:不良林), server: 38.68.134.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林), server: 213.183.53.177, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇭🇰 香港-3.46MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇷🇺 俄罗斯联邦-976.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇨🇳 中国-4.50MB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇺🇸 美国-1.64MB/s(Youtube:不良林), server: 38.121.43.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-1.10MB/s(Youtube:不良林), server: 38.75.136.102, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇳🇱 荷兰-584.1KB/s(Youtube:不良林), server: 37.120.192.158, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-222.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-976.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-222.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-976.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-222.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-976.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-222.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-976.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-222.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-976.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-222.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-976.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-222.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-976.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
