--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林), server: 213.183.53.177, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇭🇰 香港-3.46MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇷🇺 俄罗斯联邦-976.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇨🇳 中国-4.50MB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇺🇸 美国-1.64MB/s(Youtube:不良林), server: 38.121.43.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.10MB/s(Youtube:不良林), server: 38.75.136.102, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇳🇱 荷兰-584.1KB/s(Youtube:不良林), server: 37.120.192.158, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇳🇱 荷兰-515.1KB/s(Youtube:不良林), server: 37.120.192.158, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇳🇱 荷兰-507.3KB/s(Youtube:不良林), server: 37.120.192.158, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-743.7KB/s(Youtube:不良林), server: 38.68.134.85, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林), server: 213.183.53.200, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇳🇱 荷兰-484.6KB/s(Youtube:不良林), server: 213.183.59.185, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林), server: 213.183.53.200, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林), server: 213.183.53.200, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇺🇸 美国-523.6KB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-2.12MB/s(Youtube:不良林), server: 38.75.136.102, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 38.75.136.102, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-2.18MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-976.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-515.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-523.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-976.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-515.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-523.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-976.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-515.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-523.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-976.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-515.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-523.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-976.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-515.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-523.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-976.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-515.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-523.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-976.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-515.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-523.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
