--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-743.7KB/s(Youtube:不良林), server: 38.68.134.85, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林), server: 213.183.53.200, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇳🇱 荷兰-484.6KB/s(Youtube:不良林), server: 213.183.59.185, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林), server: 213.183.53.200, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林), server: 213.183.53.200, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
-  - {name: 🇺🇸 美国-523.6KB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇷🇺 俄罗斯联邦-206.0KB/s(Youtube:不良林), server: 213.183.53.214, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
   - {name: 🇺🇸 美国-2.12MB/s(Youtube:不良林), server: 38.75.136.102, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 38.75.136.102, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-2.18MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇷🇺 俄罗斯联邦-398.0KB/s(Youtube:不良林), server: 213.183.53.200, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇳🇱 荷兰-1020.0KB/s(Youtube:不良林), server: 37.120.192.158, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-674.4KB/s(Youtube:不良林), server: 38.121.43.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-3.29MB/s(Youtube:不良林), server: 38.68.134.85, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-2.16MB/s(Youtube:不良林), server: 38.68.134.85, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-713.8KB/s(Youtube:不良林), server: 38.121.43.71, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-2.70MB/s(Youtube:不良林), server: 51.81.223.4, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-523.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-206.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-674.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-523.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-206.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-674.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-523.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-206.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-674.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-523.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-206.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-674.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-523.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-206.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-674.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-523.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-206.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-674.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.44MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-523.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-206.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-398.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1020.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-674.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
