--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-484.6KB/s(Youtube:不良林), server: 213.183.59.185, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 🇺🇸 美国-743.7KB/s(Youtube:不良林), server: 38.68.134.85, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-398.8KB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-736.7KB/s(Youtube:不良林), server: 38.75.136.102, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇷🇺 俄罗斯联邦-206.0KB/s(Youtube:不良林), server: 213.183.53.214, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 保加利亚-314.3KB/s(Youtube:不良林), server: 213.183.63.217, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
   - {name: 🇯🇵 日本-166.0KB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林), server: 213.183.53.200, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇺🇸 美国-609.5KB/s(Youtube:不良林), server: 38.121.43.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-3.29MB/s(Youtube:不良林), server: 38.68.134.85, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-2.16MB/s(Youtube:不良林), server: 38.68.134.85, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-713.8KB/s(Youtube:不良林), server: 38.121.43.71, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-736.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-206.0KB/s(Youtube:不良林)
+      - 保加利亚-314.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-166.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-609.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-736.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-206.0KB/s(Youtube:不良林)
+      - 保加利亚-314.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-166.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-609.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-736.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-206.0KB/s(Youtube:不良林)
+      - 保加利亚-314.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-166.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-609.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-736.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-206.0KB/s(Youtube:不良林)
+      - 保加利亚-314.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-166.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-609.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-736.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-206.0KB/s(Youtube:不良林)
+      - 保加利亚-314.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-166.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-609.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-736.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-206.0KB/s(Youtube:不良林)
+      - 保加利亚-314.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-166.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-609.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-484.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-743.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-736.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-206.0KB/s(Youtube:不良林)
+      - 保加利亚-314.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-166.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-609.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
